fix(content): hide scrollbar when content doesn't need to scroll
Overflow-y to auto

--- a/src/components/content/content.scss
+++ b/src/components/content/content.scss
@@ -37,7 +37,7 @@ a {
   display: block;
 
   overflow-x: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
   -webkit-overflow-scrolling: touch;
   will-change: scroll-position;
 
